                                CHANGES

                    Java(R) 2 SDK, Standard Edition
                     Java(R) 2 Runtime Environment
                           JDK/JRE 1.2.2_015


This CHANGES file summarizes the changes between the FCS version of 
JDK/JRE 1.2.2 and this patch version, JDK/JRE 1.2.2_015. For changes
in the Java platform since earlier releases, see the the
following document on the Java Software web site:

       http://java.sun.com/products/jdk/1.2/changes.html



----------------------------------------------------------------------
INTRODUCTION
-----------------------------------------------------------------------
This is patch 015 of the 1.2.2 version of the Java Development
Kit. For each patch release of the 1.2.2 version, 
it is the Java(R) 2 SDK Windows 95/98/2000/NT production release, and the 
Solaris(tm) reference implementation of the Java 2 SDK source base.

For the WIN32 production release, the Java(tm) Plug-in product 
is included with the JRE 1.2.2 software.

-----------------------------------------------------------------------
BUGS FIXED IN PATCH JDK/JRE 1.2.2_015
-----------------------------------------------------------------------

4518039 - "~" in the html file does not display on the URL scraper.

-----------------------------------------------------------------------
BUGS FIXED IN PATCH JDK/JRE 1.2.2_014
-----------------------------------------------------------------------

4528128 - Corruption of jar/zip files should not crash VM

4750641 - REGRESSION: Array.clone() broken in 1.4.1-b21

-----------------------------------------------------------------------
BUGS FIXED IN PATCH JDK/JRE 1.2.2_013
-----------------------------------------------------------------------

4432072 - Jdk1.2.2_008: Chinese display problem in swing and 
          java 2d on win2000

4498413 - appletviewer: "network operation" test case fails

4667411 - Need fix for Performance issue with ThreadLocal in 
          Java 1.2.2_XX 
