@@ -1,7 +1,7 @@
 /*
- * @(#)URLClassLoader.java	1.68 01/11/29
+ * @(#)URLClassLoader.java	1.70 03/06/13
  *
- * Copyright 2002 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 2003 Sun Microsystems, Inc. All rights reserved.
  * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
@@ -47,7 +47,7 @@ import sun.misc.URLClassPath;
  * access the URLs specified when the URLClassLoader was created.
  *
  * @author  David Connelly
- * @version 1.68, 11/29/01
+ * @version 1.70, 06/13/03
  * @since   JDK1.2
  */
 public class URLClassLoader extends SecureClassLoader {
@@ -538,10 +538,17 @@ final class FactoryURLClassLoader extends URLClassLoader {
 	// should go away once we've added support for exported packages.
 	SecurityManager sm = System.getSecurityManager();
 	if (sm != null) {
-	    int i = name.lastIndexOf('.');
-	    if (i != -1) {
-		sm.checkPackageAccess(name.substring(0, i));
-	    }
+            String cname = name.replace('/', '.');
+            if (cname.startsWith("[")) {
+                int b = cname.lastIndexOf('[') + 2;
+                if (b > 1 && b < cname.length()) {
+                    cname = cname.substring(b);
+                }
+            }
+            int i = cname.lastIndexOf('.');
+            if (i != -1) {
+                sm.checkPackageAccess(cname.substring(0, i));
+            }
 	}
 	return super.loadClass(name, resolve);
     }
