@@ -1,7 +1,7 @@
 /*
- * @(#)Adler32.java	1.20 01/11/29
+ * @(#)Adler32.java	1.22 03/05/15
  *
- * Copyright 2002 Sun Microsystems, Inc. All rights reserved.
+ * Copyright 2003 Sun Microsystems, Inc. All rights reserved.
  * SUN PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
  */
 
@@ -13,7 +13,7 @@ package java.util.zip;
  * can be computed much faster.
  *
  * @see		Checksum
- * @version 	1.20, 11/29/01
+ * @version 	1.22, 05/15/03
  * @author 	David Connelly
  */
 public
@@ -49,7 +49,7 @@ class Adler32 implements Checksum {
 	if (b == null) {
 	    throw new NullPointerException();
 	}
-	if (off < 0 || len < 0 || off + len > b.length) {
+	if (off < 0 || len < 0 || off > b.length - len) {
 	    throw new ArrayIndexOutOfBoundsException();
 	}
 	adler = updateBytes(adler, b, off, len);
